h1 and p tag added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Exemple</title>
+    <title>Exemple modifier</title>
 </head>
 <body>
     <h1>Bonjour</h1>
+    <p>Je suis un paragraphe</p>
 </body>
 </html>
